--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "dev": "bunchee --watch",
     "dev:test": "turbo run dev --filter=test...",
     "format": "prettier --write .",
-    "test": "playwright test"
+    "test": "playwright test",
+    "prepare": "pnpm build"
   },
   "keywords": [
     "react",
